fix: Update scrollbar's layout

--- a/assets/scss/components/_scrollbar.scss
+++ b/assets/scss/components/_scrollbar.scss
@@ -6,7 +6,7 @@
   scrollbar-color: $black $brand-06;
 
   &::-webkit-scrollbar {
-    width: .325rem;
+    width: .3rem;
     // width: 3px;
   }
 
@@ -28,6 +28,12 @@
 
   // 滾動條軌道背景顏色
   &::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 0 .3rem $brand-06;
   }
+}
+
+.modal-dialog-scrollable .modal-content {
+  padding-top: 40px;
+  padding-bottom: 40px;
+  padding-right: 16px;
 }
